# drivers_hdf_core

./: 0822_hdf_core.patch  CODEOWNERS  OAT.xml  README_zh.md  audio.patch  bundle.json
adapter/: BUILD.gn  hdf_adapter.gni
adapter/khdf/hongmeng/: README_zh.md
adapter/khdf/hongmeng/manager/src/: devmgr_load.c
adapter/khdf/hongmeng/osal/include/: hdf_log_adapter.h  hdf_types.h  hdf_workqueue.h  osal_atomic_def.h  osal_cdev_adapter.h  osal_math.h  osal_uaccess.h
adapter/khdf/hongmeng/osal/src/: osal_cdev.c  osal_deal_log_format.c  osal_file.c  osal_firmware.c  osal_irq.c  osal_mem.c  osal_mutex.c  osal_sem.c  osal_spinlock.c  osal_thread.c  osal_time.c  osal_timer.c  osal_workqueue.c
adapter/khdf/linux/: Kconfig  Makefile  patch_hdf.sh
adapter/khdf/linux/manager/: Makefile
adapter/khdf/linux/manager/src/: devmgr_load.c  devmgr_pm_reg.c  hdf_kevent.c
adapter/khdf/linux/model/audio/: Kconfig  Makefile
adapter/khdf/linux/model/display/: Makefile
adapter/khdf/linux/model/input/: Kconfig  Makefile
adapter/khdf/linux/model/sensor/: Kconfig  Makefile
adapter/khdf/linux/model/storage/: emmc_adapter.c  mmc_adapter.c  sdio_adapter.c
adapter/khdf/linux/network/: Kconfig
adapter/khdf/linux/network/src/: net_device_adapter.c
adapter/khdf/linux/osal/include/: osal_cdev_adapter.h
adapter/khdf/linux/osal/src/: osal_cdev.c  osal_file.c  osal_firmware.c  osal_irq.c  osal_mem.c  osal_mutex.c  osal_sem.c  osal_spinlock.c  osal_thread.c  osal_time.c  osal_timer.c  osal_workqueue.c
adapter/khdf/linux/platform/: Kconfig  platform.mk
adapter/khdf/linux/platform/adc/: adc_iio_adapter.c
adapter/khdf/linux/platform/clock/: clock_adapter.c
adapter/khdf/linux/platform/fwk/: platform_trace.c
adapter/khdf/linux/platform/gpio/: gpio_adapter.c
adapter/khdf/linux/platform/i2c/: i2c_adapter.c
adapter/khdf/linux/test/: Makefile  test_khdf.mk
adapter/khdf/liteos/: BUILD.gn  Kconfig  hdf.gni
adapter/khdf/liteos/platform/: BUILD.gn  Makefile
adapter/khdf/liteos/test/: BUILD.gn  Makefile  test_lite.mk
adapter/khdf/liteos_m/: BUILD.gn  hdf.gni
adapter/khdf/liteos_m/core/: BUILD.gn
adapter/khdf/liteos_m/osal/: BUILD.gn
adapter/khdf/liteos_m/platform/: BUILD.gn  platform_trace.c
adapter/khdf/uniproton/: BUILD.gn  README.md  hdf.gni
adapter/khdf/uniproton/core/: BUILD.gn
adapter/khdf/uniproton/osal/: BUILD.gn
adapter/khdf/uniproton/platform/: BUILD.gn
adapter/platform/can/: can_virtual.c
adapter/platform/gpio/: BUILD.gn  gpio_asr.c  gpio_bes.c  gpio_gr5xx.c  gpio_stm32f4xx.c  gpio_wm.c
adapter/platform/i2c/: BUILD.gn  i2c_bes.c  i2c_stm32f4xx.c  i2c_wm.c
adapter/platform/mipi_dsi/: BUILD.gn  mipi_drm_imx8mm.c
adapter/platform/pwm/: BUILD.gn  pwm_bes.c  pwm_stm32f4xx.c  pwm_wm.c
adapter/platform/spi/: BUILD.gn  spi_bes.c  spi_stm32f4xx.c  spi_wm.c
adapter/platform/uart/: BUILD.gn  uart_asr.c  uart_bes.c  uart_gr5xx.c  uart_stm32f4xx.c  uart_wm.c
adapter/platform/watchdog/: BUILD.gn  watchdog_bes.c  watchdog_stm32f4xx.c  watchdog_wm.c
adapter/uhdf/: hdi_small.gni
adapter/uhdf/manager/: BUILD.gn
adapter/uhdf/platform/: BUILD.gn
adapter/uhdf/posix/: BUILD.gn
adapter/uhdf/posix/old/: BUILD.gn
adapter/uhdf/test/: BUILD.gn
adapter/uhdf2/: hdi.gni  uhdf.gni
adapter/uhdf2/hcs/: BUILD.gn  hcs.gni
adapter/uhdf2/hdi/: BUILD.gn
adapter/uhdf2/hdi/src/: buffer_util.c  devmgr_client.c  hdf_load_hdi.c  hdi_buffer_handle.cpp  hdi_smq_syncer.cpp  hdi_support.cpp  idevmgr_client.cpp  iservmgr_client.cpp  native_buffer.cpp  object_collector.cpp  servmgr_client.c  servstat_listener.c  servstat_listener_stub.cpp  stub_collector.cpp
adapter/uhdf2/hdi/test/: BUILD.gn
adapter/uhdf2/host/: BUILD.gn  devhost.c
adapter/uhdf2/host/include/: devsvc_manager_proxy.h
adapter/uhdf2/host/peripheral/: BUILD.gn  hdf_peripheral.cfg
adapter/uhdf2/host/src/: devhost_dump.c  devhost_object_config.c  devhost_service_full.c  devhost_service_stub.c  device_service_stub.c  device_token_stub.c  devmgr_service_proxy.c  devsvc_manager_proxy.c  driver_loader_full.c  hdf_device_thread.c
adapter/uhdf2/host/test/: BUILD.gn
adapter/uhdf2/include/hdi/: hdi_base.h  iservmgr_hdi.h  servmgr_hdi.h
adapter/uhdf2/ipc/: BUILD.gn
adapter/uhdf2/ipc/include/: hdf_remote_adapter.h  hdf_remote_adapter_if.h  iproxy_broker.h
adapter/uhdf2/ipc/src/: hdf_dump.cpp  hdf_remote_adapter.cpp  hdf_sbuf_impl_hipc.cpp
adapter/uhdf2/manager/: BUILD.gn  device_manager.c  hdf_devmgr.cfg  hdf_pnp.cfg
adapter/uhdf2/manager/include/: devhost_service_proxy.h  devmgr_service_stub.h
adapter/uhdf2/manager/src/: devhost_service_proxy.c  devmgr_dump.c  devmgr_object_config.c  devmgr_query_device.c  devmgr_service_full.c  devmgr_service_stub.c  devmgr_uevent.c  devsvc_manager_stub.c  driver_installer_full.c  servstat_listener_holder.c
adapter/uhdf2/model/display/: BUILD.gn
adapter/uhdf2/osal/src/: osal_sysevent.c
adapter/uhdf2/osal/test/: BUILD.gn
adapter/uhdf2/platform/: BUILD.gn
adapter/uhdf2/pub_utils/: BUILD.gn
adapter/uhdf2/security/: BUILD.gn
adapter/uhdf2/security/src/: hdf_security.c
adapter/uhdf2/shared/include/: hdf_remote_service.h
adapter/uhdf2/shared/src/: dev_attribute_serialize.c  hcb_config_entry.c
adapter/uhdf2/shared/test/: BUILD.gn  dev_attribute_serialize_test.cpp
adapter/uhdf2/test/: BUILD.gn
adapter/uhdf2/utils/: BUILD.gn
adapter/uhdf2/utils/include/: hdf_xcollie.h
adapter/uhdf2/utils/src/: hdf_xcollie.cpp
framework/test/fuzztest/: BUILD.gn
framework/test/fuzztest/devicemanagerstart_fuzzer/: BUILD.gn  devicemanagerstart_fuzzer.cpp
framework/test/fuzztest/devmgr_service_fuzzer/: BUILD.gn  service_fuzzer.cpp
framework/test/fuzztest/devmgr_service_stub_fuzzer/: BUILD.gn
framework/test/fuzztest/devmgrservicestub_fuzzer/: BUILD.gn  devmgrservicestub_fuzzer.cpp
framework/test/fuzztest/devsvc_manager_stub_fuzzer/: BUILD.gn  devsvcmanagerstub_fuzzer.cpp
framework/test/fuzztest/devsvcmanagerstub_fuzzer/: BUILD.gn  devsvcmanagerstub_fuzzer.cpp
framework/test/fuzztest/hdi_fuzzer/: BUILD.gn  hdi_fuzzer.cpp  hdi_fuzzer.h
(+1026 files in other folders)
