#
# Copyright (c) 2026 Huawei Device Co., Ltd.
#
# This file is dual licensed: you can use it either under the terms of
# the GPL, or the BSD license, at your option.
# See the LICENSE file in the root of this repository for complete details.
#

declare_args() {
  hdf_core_lite_utils_config = false
}
