# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License..

hdf_framework_path = "//drivers/hdf_core/framework"
hdf_uhdf_path = "//drivers/hdf_core/adapter/uhdf2"

declare_args() {
  samgr_enable = true
  if (defined(global_parts_info) &&
      !defined(global_parts_info.systemabilitymgr_samgr)) {
    samgr_enable = false
  }

  c_utils_enable = true
  if (defined(global_parts_info) &&
      !defined(global_parts_info.commonlibrary_c_utils)) {
    c_utils_enable = false
  }

  hilog_enable = true
  if (defined(global_parts_info) &&
      !defined(global_parts_info.hiviewdfx_hilog)) {
    hilog_enable = false
  }

  selinux_adapter_enable = true
  if (defined(global_parts_info) &&
      !defined(global_parts_info.security_selinux_adapter)) {
    selinux_adapter_enable = false
  }

  hilog_lite_enable = true
  if (defined(global_parts_info) &&
      !defined(global_parts_info.hiviewdfx_hilog_lite)) {
    hilog_lite_enable = false
  }
}
