# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

config("libhdf_ipc_adapter_pub_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//drivers/hdf_core/interfaces/inner_api/ipc",
    "//drivers/hdf_core/interfaces/inner_api/core",
  ]
}
if (defined(ohos_lite)) {
  group("libhdf_ipc_adapter") {
    deps = []
  }
} else {
  ohos_shared_library("libhdf_ipc_adapter") {
    include_dirs = [
      "include",
      "//drivers/hdf_core/framework/utils/include",
      "//drivers/hdf_core/framework/core/shared/include",
    ]

    public_configs = [ ":libhdf_ipc_adapter_pub_config" ]

    sources = [
      "src/hdf_dump.cpp",
      "src/hdf_remote_adapter.cpp",
      "src/hdf_remote_service.c",
      "src/hdf_sbuf_impl_hipc.cpp",
    ]

    if (is_standard_system) {
      external_deps = [
        "c_utils:utils",
        "hdf_core:libpub_utils",
        "hiviewdfx_hilog_native:libhilog",
        "ipc:ipc_single",
        "samgr:samgr_proxy",
      ]
    } else {
      external_deps = [
        "hilog:libhilog",
        "ipc:ipc_single",
        "samgr:samgr_proxy",
      ]
    }

    innerapi_tags = [
      "chipsetsdk",
      "platformsdk_indirect",
    ]
    install_images = [ system_base_dir ]
    subsystem_name = "hdf"
    part_name = "hdf_core"
  }
}
