# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

###########################palTest###########################
ohos_unittest("DevMgrTest") {
  module_out_path = "hdf_core/devmgr"
  sources = [ "unittest/devmgr_test.cpp" ]

  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/framework/utils/include",
    "//drivers/hdf_core/adapter/uhdf2/hdi/include",
    "//drivers/hdf_core/adapter/uhdf2/include/hidl",
    "unittest/common/",
  ]

  deps = [
    "$hdf_uhdf_path/hdi:libhdi",
    "$hdf_uhdf_path/host/test/unittest/sample_driver:sample_driver",
    "$hdf_uhdf_path/utils:libhdf_utils",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "hiviewdfx_hilog_native:libhilog",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
}

ohos_unittest("DevHostTest") {
  module_out_path = "hdf_core/devhost"
  sources = [ "unittest/devhost_test.cpp" ]

  include_dirs = [
    "//drivers/hdf_core/framework/core/shared/include",
    "//drivers/hdf_core/framework/core/manager/include",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/framework/utils/include",
    "//drivers/hdf_core/framework/core/host/include",
    "//drivers/hdf_core/adapter/uhdf2/host/include",
    "//drivers/hdf_core/adapter/uhdf2/manager/include",
    "//drivers/hdf_core/adapter/uhdf2/ipc/include",
  ]

  deps = [
    "$hdf_uhdf_path/host:libhdf_host",
    "$hdf_uhdf_path/ipc:libhdf_ipc_adapter",
    "$hdf_uhdf_path/utils:libhdf_utils",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "hiviewdfx_hilog_native:libhilog",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
}

###########################end###########################
group("unittest") {
  testonly = true
  deps = [
    ":DevHostTest",
    ":DevMgrTest",
  ]
}
