# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("./../../uhdf.gni")

hdf_framework_path = "./../../../../framework"
hdf_uhdf_path = "./../.."
hdf_interface_path = "./../../../../interface"

###########################palTest###########################
ohos_unittest("DevMgrTest") {
  module_out_path = "hdf_core/devmgr"
  sources = [
    "$hdf_uhdf_path/ipc/src/hdf_dump.cpp",
    "unittest/devmgr_test.cpp",
  ]

  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "$hdf_framework_path/include/osal",
    "$hdf_framework_path/include/utils",
    "$hdf_framework_path/utils/include",
    "$hdf_uhdf_path/hdi/include",
    "$hdf_uhdf_path/include/hidl",
    "$hdf_uhdf_path/ipc/include",
    "$hdf_interface_path/inner_api/ipc",
    "unittest/common/",
  ]

  deps = [
    "$hdf_uhdf_path/hdi:libhdi",
    "$hdf_uhdf_path/host/test/unittest/sample_driver:sample_driver",
    "$hdf_uhdf_path/utils:libhdf_utils",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
}

ohos_unittest("DevHostTest") {
  module_out_path = "hdf_core/devhost"
  sources = [ "unittest/devhost_test.cpp" ]

  include_dirs = [
    "$hdf_framework_path/core/shared/include",
    "$hdf_framework_path/core/manager/include",
    "$hdf_framework_path/include/osal",
    "$hdf_framework_path/include/utils",
    "$hdf_framework_path/utils/include",
    "$hdf_framework_path/core/host/include",
    "$hdf_uhdf_path/host/include",
    "$hdf_uhdf_path/manager/include",
    "$hdf_uhdf_path/ipc/include",
  ]

  deps = [
    "$hdf_uhdf_path/host:libhdf_host",
    "$hdf_uhdf_path/ipc:libhdf_ipc_adapter",
    "$hdf_uhdf_path/utils:libhdf_utils",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
}

###########################end###########################
group("unittest") {
  testonly = true
  deps = [
    ":DevHostTest",
    ":DevMgrTest",
  ]
}
