# Copyright (c) 2022 Huawei Device Co., Ltd.
#
# HDF is dual licensed: you can use it either under the terms of
# the GPL, or the BSD license, at your option.
# See the LICENSE file in the root of this repository for complete details.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
module_output_path = "hdf_core/devmgr_c"

ohos_fuzztest("QueryUnusableDeviceInfoFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file = "//drivers/hdf_core/framework/test/fuzztest/devmgr_c_fuzzer/queryusabledeviceInfo_fuzzer"

  include_dirs = [ "//drivers/hdf_core/adapter/uhdf2/hdi/include/hdi" ]

  sources = [ "queryusabledeviceInfo_fuzzer.cpp" ]

  deps = []

  external_deps = [
    "c_utils:utils",
    "hdf_core:libhdf_ipc_adapter",
    "hdf_core:libhdf_utils",
    "hdf_core:libhdi",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":QueryUnusableDeviceInfoFuzzTest" ]
}
