# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
#
# HDF is dual licensed: you can use it either under the terms of
# the GPL, or the BSD license, at your option.
# See the LICENSE file in the root of this repository for complete details.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
module_output_path = "hdf_core/servmgr_cpp"

hdf_framework_path = "./../../../../../framework"
hdf_adapter_path = "./../../../../../adapter"

ohos_fuzztest("ServStatListenerStubFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file = "$hdf_framework_path/test/fuzztest/servmgr_cpp_fuzzer/servstatlistenerstub_fuzzer"

  include_dirs = [ "$hdf_adapter_path/uhdf2/hdi/include/hdi" ]

  sources = [ "servstatlistenerstub_fuzzer.cpp" ]

  deps = []

  external_deps = [
    "c_utils:utils",
    "hdf_core:libhdf_ipc_adapter",
    "hdf_core:libhdf_utils",
    "hdf_core:libhdi",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":ServStatListenerStubFuzzTest" ]
}
