# Copyright (c) 2024 Huawei Device Co., Ltd.
#
# HDF is dual licensed: you can use it either under the terms of
# the GPL, or the BSD license, at your option.
# See the LICENSE file in the root of this repository for complete details.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "hdf_core/hdf_core/uhdf2_shared_fuzzer"

hdf_framework_path = "../../../../../framework"
hdf_uhdf_path = "../../../../../adapter/uhdf2"

ohos_fuzztest("SharedFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file =
    "$hdf_framework_path/test/fuzztest/uhdf2_shared_fuzzer/shared_fuzzer"

  include_dirs = [
    "$hdf_uhdf_path/shared/include",
    "$hdf_uhdf_path/utils/include",
    "$hdf_uhdf_path/ipc/include",
    "$hdf_framework_path/include",
    "$hdf_framework_path/include",
    "$hdf_framework_path/core/manager/include",
    "$hdf_framework_path/core/common/include/manager/",
    "$hdf_framework_path/core/host/include",
    "$hdf_framework_path/core/shared/include",
    "$hdf_framework_path/utils/include",
  ]

  sources = [ "shared_fuzzer.cpp", ]
  deps = [
    "../../../../../adapter/uhdf2/utils:libhdf_utils",
    "../../../../../adapter/uhdf2/host:libhdf_host",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "init:libbegetutil",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":SharedFuzzTest" ]
}
