# Copyright (c) 2024 Huawei Device Co., Ltd.
#
# HDF is dual licensed: you can use it either under the terms of
# the GPL, or the BSD license, at your option.
# See the LICENSE file in the root of this repository for complete details.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "hdf_core/hdf_core/uhdf2_utils_fuzzer"

hdf_framework_path = "../../../../../framework"
hdf_uhdf_path = "../../../../../adapter/uhdf2"

ohos_fuzztest("HdfXCollieFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file =
      "$hdf_framework_path/test/fuzztest/uhdf2_utils_fuzzer/hdfxcollie_fuzzer"

  include_dirs = [ "$hdf_uhdf_path/utils/include" ]

  sources = [ "hdfxcollie_fuzzer.cpp" ]

  deps = [ "$hdf_uhdf_path/pub_utils:libpub_utils" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":HdfXCollieFuzzTest" ]
}
