# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/hdf_core/adapter/uhdf2/hdi.gni")

config("libdisplay_composer_hdi_impl_config") {
  include_dirs = [
    "//drivers/hdf_core/adapter/uhdf2/model/display/composer",
  ]
}

ohos_shared_library("libdisplay_composer_hdi_impl") {
  sources = [
    "hdi_impl/display_composer_interface.cpp",
  ]

  public_configs = [ ":libdisplay_composer_hdi_impl_config" ]

  include_dirs = [
    "//drivers/hdf_core/adapter/uhdf2/model/display/composer",
    "//drivers/hdf_core/adapter/uhdf2/model/display/base/bufferhandle_parcelable",
    "//drivers/hdf_core/adapter/uhdf2/model/display/base/hdifd_parcelable",
  ]

  deps = [
    "//drivers/hdf_core/adapter/uhdf2/model/display/base/bufferhandle_parcelable:libbufferhandle_parcelable",
    "//drivers/hdf_core/adapter/uhdf2/model/display/base/hdifd_parcelable:libhdifd_parcelable",
  ]

  public_deps = [ "//foundation/graphic/graphic_2d/utils/buffer_handle:buffer_handle" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "utils_base:utils",
    "drivers_interface_display:libdisplay_composer_proxy_1.0",
  ]

  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "hdf_core"
}
